# boids_rust

./: Cargo.toml
src/: main.rs
src/camera/: mod.rs
src/constants/: mod.rs  types.rs
src/ecs/: component_type.rs  entity.rs  entity_mgr.rs  mod.rs  signature.rs
src/game/: mod.rs
src/graphics/renderer/: mod.rs
src/logic/behaviour/: boid.rs  mod.rs  traits.rs
src/logic/boid/: boid_impl.rs  boid_mgr.rs  mod.rs  traits.rs
src/math/: mod.rs
src/math/quadtree/: mod.rs  quadt.rs  region.rs  traits.rs
src/math/vec/: mod.rs
