[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.35", features = ["gfx", "ttf"] }
rand = "0.8.5"
num = "0.4.0"
approx = "0.5.1"
bitflags = "2.3.3"
crossbeam = "0.8.2"
